<resources>
    <string name="app_name">Task Tracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="subscribe">Subscribe!</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Welcome to Task Tracker</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="description">Subscribe and you will receive all the information about this new awesome application that is going to help you a lot with all you daily tasks.</string>
    <string name="form_description">Fill the form and receive all the updates about Task Tracker.</string>
    <string name="form_name">Name</string>
    <string name="form_email">Email</string>
    <string name="terms_conditions">Accept terms and conditions</string>
    <string name="updates_authorization">I agree receive any updates from Task Trackder.</string>
    <string name="track_subscription">Subscribe to Task Tracker</string>
    <string name="subscription_feedback">Thanks for you subscription</string>
    <string name="feedback_notification">You are going to receive some notification about this great application through the email you have provided:</string>
    <string name="feedback_exit">Exit</string>
</resources>