<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="133dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_weight="0"
            android:gravity="center|center_vertical"
            android:padding="10px"
            android:text="@string/form_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_weight="0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/form_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_weight="0"
            android:hint="@string/form_email">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/terms_conditions" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:enabled="false"
            android:text="@string/track_subscription" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>